--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ignacio Escritor – Entre Ríos Mares</title>
+  <title>Entre Ríos Mares -  Escritor  Guionista  Investigador  </title>
 
   <!-- Font Awesome 6.5.0 CDN para íconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -105,10 +105,10 @@
 
 
 .especial {
-  font-family: 'Orbitron', sans-serif;
-  font-size: 1.2rem;
+  font-family: 'Arial', sans-serif;
+  font-size: 1rem;
   color: #ffd700;
-  text-shadow: 1px 1px 4px #000;
+  text-shadow: 1px 1px 2px #000;
 }
   </style>
 </head>
@@ -117,7 +117,7 @@
     <h1>Entre Rios Mares</h1>
     <div class="animated-text"> Guionista, investigador y copywriter </div>
 
-    <div class="description">
+   <div class="description especial">
       (Novedades x Investigación) + Retención
     </div>
 
