--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('https://images.unsplash.com/photo-1487147264018-f937fba0c817?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
+      background: url('https://i.pinimg.com/736x/d6/fe/7c/d6fe7cbb0d92350c9514c063c3317c52.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
       text-align: center;
@@ -103,7 +103,9 @@
       color: #ccc;
     }
 
-
+.titulo-principal {
+  text-shadow: 0.5px 0.5px 2px rgba(0, 0, 0, 0.3);
+}
 .especial {
   font-family: 'Arial', sans-serif;
   font-size: 1rem;
@@ -114,7 +116,7 @@
 </head>
 <body>
   <div class="overlay">
-    <h1>Entre Rios Mares</h1>
+    <h1 class="titulo-principal">Entre Rios Mares</h1>
     <div class="animated-text"> Guionista, investigador y copywriter </div>
 
    <div class="description especial">
