--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
   <div class="overlay">
-    <h1 class="titulo-principal">Entre Rios Mares</h1>
+    <h1 class="titulo-principal">Entre Ríos Mares</h1>
     <div class="animated-text"> Guionista, investigador y copywriter </div>
 
    <div class="description especial">
