--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
       transform: translateY(20px);
       animation: fadeSlide 2s ease-out forwards;
     }
+    
+
+    .Subtitulo2-text {
+      font-size: 1.2rem;
+          }
+
 
     @keyframes fadeSlide {
       to {
@@ -118,8 +124,8 @@
 <body>
   <div class="overlay">
     <h1 class="titulo-principal">Entre Ríos Mares</h1>
-    <div class="animated-text"> Guionista, investigador y copywriter </div>
-
+    <div class="animated-text"> Guionista, investigador y publicidad </div>
+ <div class="Subtitulo2-text"> Scriptwriter, researcher y copywriter </div>
    <div class="description especial">
       (Novedades x Investigación) + Retención
     </div>
