--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
       animation: fadeSlide 2s ease-out forwards;
     }
     
-
-    .Subtitulo2-text {
+.Subtitulo2-text {
       font-size: 1.2rem;
+ opacity: 0;
+      transform: translateY(50px);
+      animation: fadeSlide 3s ease-out forwards
           }
 
 
@@ -113,12 +115,21 @@
 .titulo-principal {
   text-shadow: 0.5px 0.5px 2px rgba(0, 0, 0, 0.3);
 }
+
 .especial {
   font-family: 'Arial', sans-serif;
   font-size: 1rem;
   color: #ffd700;
   text-shadow: 1px 1px 2px #000;
+  opacity: 0;
+  transform: scale(0.7);
+  animation: zoomIn 0.8s ease-out forwards;
+  animation-delay: 2s; /* podés ajustar el delay si querés que aparezca después */
 }
+ @keyframes zoomIn {
+      to {
+        opacity: 1;
+        transform: scale(1);
   </style>
 </head>
 <body>
