--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
     </div>
 <div class="description">
    Creador de historias que entrelazan datos con imaginación, revelando posibilidades que hasta ahora habían pasado por alto.
-      Mi pasión es convertir ideas, conocimiento e información en guiones que atrapan, emocionan, enseñan o simplemente, y nadamenos, que entretienen.
+     Vamos a convertir ideas, conocimiento; articular información, de modo que se conviertan en guiones que atrapen, emocionen, enseñen o simplemente (y nada menos) entretengan.
+  Con formación de grado, talleres de escritura creativa y un amor por las matemáticas, forman mi caja de herramientas conceptual que pondré a vuestra disposición.
 
   </div>
    
