Modalidad de pago.html

--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
   </div>
    
   <footer>
-  Medios de pago aceptados: Binance · Mercado Pago
+  Modalidad de pago: Se abona el 50% por adelantado para comenzar el trabajo.<br>
+Se aceptan pagos por Binance y Mercado Pago.
 
   <div class="icons" style="margin-top: 20px;">
     <a href="https://wa.me/5491153402972" target="_blank" title="WhatsApp: +54 9 11 5340 2972">
