link modalidad .html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
       font-size: 1.1rem;
       line-height: 1.6;
     }
-
+.descriptionmodalidad { 
+      margin-top: 40px;
+      font-size: 0.9rem;
+      color: #ccc;
+    }
     .links a {
       display: block;
       width: 100%;
@@ -159,6 +163,7 @@
   </div>
    
   <footer>
+    <div class="descriptionmodalidad" id="modalidadpago">
   Modalidad de pago: Se abona el 50% por adelantado para comenzar el trabajo.<br>
 Se aceptan pagos por Binance y Mercado Pago.
 
