--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
    
   <footer>
     <div class="descriptionmodalidad" id="modalidadpago">
-  Modalidad de pago: Se abona el 50% por adelantado para comenzar el trabajo.<br>
-Se aceptan pagos por Binance y Mercado Pago.
+  Modalidad de pago: 50% por adelantado para comenzar el trabajo.<br>
+Se acepta Binance y Mercado Pago.
 
   <div class="icons" style="margin-top: 20px;">
     <a href="https://wa.me/5491153402972" target="_blank" title="WhatsApp: +54 9 11 5340 2972">
