--- a/index.html
+++ b/index.html
@@ -184,6 +184,22 @@ Se acepta Binance y Mercado Pago.
 </footer>
 </div>
 
-
+<!-- Default Statcounter code for Entre Rios Mares
+https://entreriosmares.github.io/EntreRiosMares/ -->
+<script type="text/javascript">
+var sc_project=13149907; 
+var sc_invisible=1; 
+var sc_security="10e17f74"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics
+Made Easy - Statcounter" href="https://statcounter.com/"
+target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/13149907/0/10e17f74/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
