--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     </div>
 <div class="description">
    Creador de historias que entrelazan datos con imaginación, revelando posibilidades que hasta ahora habían pasado por alto.
-     Vamos a convertir ideas, conocimiento; articular información, de modo que se conviertan en guiones que atrapen, emocionen, enseñen o simplemente (y nada menos) entretengan.
-  Con formación de grado, talleres de escritura creativa y un amor por las matemáticas, forman mi caja de herramientas conceptual que pondré a vuestra disposición.
+     Vamos a convertir ideas, conocimiento; articular información, de modo que se conviertan en guiones que atrapen, emocionen, enseñen o simplemente (y nada menos) entretengan. <br>
+  Con formación de grado, talleres de escritura creativa y un amor por las matemáticas, mi caja de herramientas conceptual queda a vuestra disposición.
 
   </div>
    
