metapara facebook.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Entre Ríos Mares -  Escritor  Guionista  Investigador  </title>
+<meta property="og:title" content="Entre Ríos Mares" />
+<meta property="og:description" content="Escritor, guionista, investigador." />
+<meta property="og:image" content="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" />
+<meta property="og:url" content="https://https://entreriosmares.github.io/EntreRiosMares/" />
+<meta property="og:type" content="website" />
+
+  
 
   <!-- Font Awesome 6.5.0 CDN para íconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
