foto vista previa facebookx.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Entre Ríos Mares -  Escritor  Guionista  Investigador  </title>
 <meta property="og:title" content="Entre Ríos Mares" />
 <meta property="og:description" content="Escritor, guionista, investigador." />
-<meta property="og:image" content="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" />
+<meta property="og:image" content="facebook.jpg" />
 <meta property="og:url" content="https://https://entreriosmares.github.io/EntreRiosMares/" />
 <meta property="og:type" content="website" />
 
