fondos alternativos.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('https://i.pinimg.com/1200x/1b/b8/73/1bb873143abfe192340884d683617d94.jpg') no-repeat center center fixed;
+      background-size: cover;
+background-position: center;
+background-attachment: fixed;
+background-repeat: no-repeat;
+transition: background-image 1s ease-in-out;
       background-size: cover;
       color: #fff;
       text-align: center;
@@ -141,6 +145,10 @@
       to {
         opacity: 1;
         transform: scale(1);
+
+
+
+        
   </style>
 </head>
 <body>
@@ -208,5 +216,13 @@ src="https://c.statcounter.com/13149907/0/10e17f74/1/"
 alt="Web Analytics Made Easy - Statcounter"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
+   const fondos = [
+    'fondo1.jpg',
+    'fondo2.jpg',
+    'fondo3.jpg',
+    'fondo4.jpg',
+    'fondo5.jpg',
+    'fondo6.jpg'
+  ];
 </body>
 </html>
