--- a/index.html
+++ b/index.html
@@ -216,7 +216,10 @@ src="https://c.statcounter.com/13149907/0/10e17f74/1/"
 alt="Web Analytics Made Easy - Statcounter"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
-   const fondos = [
+  
+</script>
+  <script>
+  const fondos = [
     'fondo1.jpg',
     'fondo2.jpg',
     'fondo3.jpg',
@@ -226,7 +229,6 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
   ];
 
   const fondoElegido = fondos[Math.floor(Math.random() * fondos.length)];
-  document.body.style.backgroundImage = `url('${fondoElegido}')`;
-</script>
+  document.bo
 </body>
 </html>
