--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
   ];
 
   const fondoElegido = fondos[Math.floor(Math.random() * fondos.length)];
-  document.bo
+  document.body.style.backgroundImage = `url('${fondoElegido}')`;
+</script>
 </body>
 </html>
