--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ transition: background-image 1s ease-in-out;
 <body>
   <div class="overlay">
     <h1 class="titulo-principal">Entre Ríos Mares</h1>
-    <div class="animated-text"> Guionista, investigador y publicidad </div>
+    <div class="animated-text"> Guionista. Investigador. Publicidad </div>
  <div class="Subtitulo2-text"> Scriptwriter, researcher y copywriter </div>
    <div class="description especial">
       (Novedades x Investigación) + Retención
