--- a/index.html
+++ b/index.html
@@ -161,12 +161,14 @@ transition: background-image 1s ease-in-out;
     </div>
 
     <div class="links">
-      <a href="https://www.youtube.com/watch?v=0cNNbb_cX1w&t=72s" target="_blank">¿Cómo fueron los primeros 5000 años después de la extinción de los dinosaurios?</a>
-      <a href="https://www.youtube.com/watch?v=e5-7KdJRkW4&t=77s" target="_blank">Lo que no sabes del Mioceno</a>
+      <a href="https://www.youtube.com/watch?v=0cNNbb_cX1w&t" target="_blank">¿Cómo fueron los primeros 5000 años después de la extinción de los dinosaurios?</a>
+      <a href="https://www.youtube.com/watch?v=e5-7KdJRkW4&t" target="_blank">Lo que no sabes del Mioceno</a>
  <a href="https://www.youtube.com/watch?v=0uroh4l557I" target="_blank">La isla en la que la evolución FALLÓ (Y sus extrañas criaturas)
 </a>
- <a href="https://www.youtube.com/watch?v=5ZN23oUtihE&t=111s" target="_blank">Lo que no sabes del Paleoceno -  parte 1</a>
- <a href="https://www.youtube.com/watch?v=wfaUPwFXuVQ&t=525s" target="_blank">LO QUE NO SABES DEL PLEISTOCENO</a>
+      <a href="https://www.youtube.com/watch?v=DdbPSzj3dAc&t" target="_blank">Lo que no sabes del Oligoceno
+</a>
+ <a href="https://www.youtube.com/watch?v=5ZN23oUtihE&t" target="_blank">Lo que no sabes del Paleoceno -  parte 1</a>
+ <a href="https://www.youtube.com/watch?v=wfaUPwFXuVQ&t" target="_blank">LO QUE NO SABES DEL PLEISTOCENO</a>
 <a href="https://www.youtube.com/watch?v=-Br8v_yCwVs" target="_blank">Cómo era la vida en el Jurásico</a>
 
     </div>
