--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:description" content="Escritor, guionista, investigador." />
 <meta property="og:image" content="facebook.jpg" />
 <meta property="og:url" content="https://https://entreriosmares.github.io/EntreRiosMares/" />
-<meta property="og:type" content="website" />
+<meta property="og:type" content="website" /> 
 
   
 
@@ -141,11 +141,24 @@ transition: background-image 1s ease-in-out;
   animation: zoomIn 0.8s ease-out forwards;
   animation-delay: 2s; /* podés ajustar el delay si querés que aparezca después */
 }
- @keyframes zoomIn {
-      to {
-        opacity: 1;
-        transform: scale(1);
+@keyframes zoomBackground {
+  0% {
+    background-size: 100%;
+  }
+  50% {
+    background-size: 130%;
+  }
+  100% {
+    background-size: 100%;
+  }
+}
 
+@keyframes zoomIn {
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 
 
         
@@ -234,3 +247,4 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 </script>
 </body>
 </html>
+
