--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <body>
   <div class="overlay">
     <h1 class="titulo-principal">Entre Ríos Mares</h1>
-    <div class="animated-text"> Guionista. Investigador. Publicidad </div>
+    <div class="animated-text"> Guionista. Investigador. Publicidad. </div>
  <div class="Subtitulo2-text"> Scriptwriter, researcher y copywriter </div>
    <div class="description especial">
       (Novedades x Investigación) + Retención
@@ -252,6 +252,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 </script>
 </body>
 </html>
+
 
 
 
