--- a/index.html
+++ b/index.html
@@ -245,13 +245,35 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
     'fondo4.jpg',
     'fondo5.jpg',
     'fondo6.jpg'
-  ];
+    'fondo7.jpg',
+    'fondo8.jpg',
+    'fondo9.jpg',
+    'fondo10.jpg',
+    'fondo11.jpg',
+    'fondo12.jpg'
+    'fondo13.jpg',
+    'fondo14.jpg',
+    'fondo15.jpg',
+    'fondo16.jpg',
+    'fondo17.jpg',
+    'fondo18.jpg'
+    'fondo19.jpg',
+    'fondo20.jpg',
+    'fondo21.jpg',
+    'fondo22.jpg',
+    'fondo23.jpg',
+    'fondo24.jpg'
+    'fondo25.jpg',
+    'fondo26.jpg',
+    'fondo27.jpg',
+      ];
 
   const fondoElegido = fondos[Math.floor(Math.random() * fondos.length)];
   document.body.style.backgroundImage = `url('${fondoElegido}')`;
 </script>
 </body>
 </html>
+
 
 
 
