--- a/index.html
+++ b/index.html
@@ -244,25 +244,25 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
     'fondo3.jpg',
     'fondo4.jpg',
     'fondo5.jpg',
-    'fondo6.jpg'
+    'fondo6.jpg',
     'fondo7.jpg',
     'fondo8.jpg',
     'fondo9.jpg',
     'fondo10.jpg',
     'fondo11.jpg',
-    'fondo12.jpg'
+    'fondo12.jpg',
     'fondo13.jpg',
     'fondo14.jpg',
     'fondo15.jpg',
     'fondo16.jpg',
     'fondo17.jpg',
-    'fondo18.jpg'
+    'fondo18.jpg',
     'fondo19.jpg',
     'fondo20.jpg',
     'fondo21.jpg',
     'fondo22.jpg',
     'fondo23.jpg',
-    'fondo24.jpg'
+    'fondo24.jpg',
     'fondo25.jpg',
     'fondo26.jpg',
     'fondo27.jpg',
@@ -273,6 +273,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 </script>
 </body>
 </html>
+
 
 
 
