--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
     'fondo6.jpg',
     'fondo7.jpg',
     'fondo8.jpg',
-    'fondo9.jpg',
+    'fondo9.jpeg',
     'fondo10.jpg',
     'fondo11.jpg',
-    'fondo12.jpg',
+    'fondo12.jpeg',
     'fondo13.jpg',
     'fondo14.jpg',
     'fondo15.jpg',
@@ -258,13 +258,13 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
     'fondo17.jpg',
     'fondo18.jpg',
     'fondo19.jpg',
-    'fondo20.jpg',
+    'fondo20.jpeg',
     'fondo21.jpg',
-    'fondo22.jpg',
-    'fondo23.jpg',
+    'fondo22.jpeg',
+    'fondo23.jpeg',
     'fondo24.jpg',
     'fondo25.jpg',
-    'fondo26.jpg',
+    'fondo26.jpeg',
     'fondo27.jpg',
       ];
 
@@ -273,6 +273,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 </script>
 </body>
 </html>
+
 
 
 
