--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
       transform: translateY(50px);
       animation: fadeSlide 3s ease-out forwards
           }
-
+.copy_right {
+  font-size: 12px;      /* Tamaño de letra */
+  color: #777;          /* Color gris */
+  text-align: center;   /* Centrado */
+  margin-top: 10px;     /* Espacio arriba */
+}
 
     @keyframes fadeSlide {
       to {
@@ -320,8 +325,23 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
   animarLetra();
     
 </script>
+  <div class="copy-right_text">
+                <div class="container">
+                    <div class="footer_border"></div>
+                    <div class="row">
+                        <div class="col-xl-12">
+                            <p class="copy_right text-center">
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Este sitio está hecho por <a href="https://colorlib.com" target="_blank">EntreRíosMares</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 </body>
 </html>
+
 
 
 
