--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       animation: fadeSlide 3s ease-out forwards
           }
 .copy_right {
-  font-size: 8px;      /* Tamaño de letra */
+  font-size: 11px;      /* Tamaño de letra */
   color: #777;          /* Color gris */
   text-align: center;   /* Centrado */
   margin-top: 10px;     /* Espacio arriba */
@@ -332,7 +332,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
                         <div class="col-xl-12">
                             <p class="copy_right text-center">
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Este sitio está hecho por <a target="_blank">EntreRíosMares</a>
+Todos los derechos reservados | Este sitio está hecho por <a target="_blank">EntreRíosMares</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
@@ -341,6 +341,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos
             </div>
 </body>
 </html>
+
 
 
 
