--- a/index.html
+++ b/index.html
@@ -205,10 +205,14 @@
        <a href="https://www.youtube.com/watch?v=j1giYRyCgmc" target="_blank">Pantalasa: El último súper Océano que Lo Cubrió Todo y Transformó la Tierra - parte 1 </a>
       <a href="https://www.youtube.com/watch?v=DdbPSzj3dAc&t" target="_blank">Lo que no sabes del Oligoceno
 </a>
+      <a href="https://www.youtube.com/watch?v=ZXGgUsZOkew" target="_blank">El Mar de Tethys: Secretos Ocultos de un Mundo Perdido</a>
  <a href="https://www.youtube.com/watch?v=5ZN23oUtihE&t" target="_blank">Lo que no sabes del Paleoceno -  parte 1</a>
  <a href="https://www.youtube.com/watch?v=wfaUPwFXuVQ&t" target="_blank">LO QUE NO SABES DEL PLEISTOCENO</a>
-      <a href="https://www.youtube.com/watch?v=ArgXnXl2f5Y" target="_blank">Chicxulub: Los Secretos del Asteroide que terminó con los Dinosaurios
-</a>
+      <a href="https://www.youtube.com/watch?v=ArgXnXl2f5Y" target="_blank">Chicxulub: Los Secretos del Asteroide que terminó con los Dinosaurios</a>
+        
+<a href="https://www.youtube.com/watch?v=mikIAd9-wPI" target="_blank">Vaalbara, Ur y Kenorland: ¿Qué Pasó Antes de los Continentes que Conocemos?</a>
+
+
 <a href="https://www.youtube.com/watch?v=-Br8v_yCwVs" target="_blank">Cómo era la vida en el Jurásico</a>
 
     </div>
@@ -341,6 +345,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
