--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
 
     /* 🔹 Rama y Ave */
     .rama {
-      position: absolute;
-      bottom: 80px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 280px;
-      height: 18px;
-      background: #4a2c2a;
-      border-radius: 10px;
-      box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
-    }
+    position: fixed;
+    bottom: 80px;
+    right: 40px;   /* 👉 rama al costado derecho */
+    width: 220px;
+    height: 16px;
+    background: #4a2c2a;
+    border-radius: 10px;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+  }
 
     .ave {
       position: absolute;
@@ -394,6 +393,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
