--- a/index.html
+++ b/index.html
@@ -17,21 +17,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
-
-   .rama {
+    .rama {
     position: fixed;
     bottom: 80px;
-    right: 40px;   /* 👉 rama al costado derecho */
-    width: 220px;
-    height: 16px;
-    background: #4a2c2a;
-    border-radius: 10px;
-    box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+    right: 40px; /* lado derecho */
+    width: 220px; /* ajusta según tu imagen */
+    height: auto;
     z-index: 10;
+  }
+
+  .rama img {
+    width: 100%;
+    height: auto;
+    display: block;
   }
 
   .ave {
@@ -57,9 +55,8 @@
       transform: scale(1) rotate(10deg);
     }
     100% {
-      /* 🔹 Ajustado para que quede sobre la rama */
-      left: calc(100% - 240px); /* se posa cerca del final de la rama */
-      top: calc(100% - 180px);  /* alineado con la altura de la rama */
+      left: calc(100% - 240px); /* alineado con la rama */
+      top: calc(100% - 180px);
       transform: scale(1) rotate(0deg);
     }
   }
@@ -245,7 +242,10 @@
    <div class="description especial">
       (Novedades x Investigación) + Retención
     </div>
-<div class="rama"></div>
+<div class="rama">
+  <img src="rama.png" alt="Rama">
+</div>
+
 <div class="ave"></div>
     <div class="links">
       <a href="https://www.youtube.com/watch?v=0cNNbb_cX1w&t" target="_blank">¿Cómo fueron los primeros 5000 años después de la extinción de los dinosaurios?</a>
@@ -395,6 +395,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
