--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     0% {
       left: -120px;
       top: 100px;
-      transform: scale(5) rotate(-10deg);
+      transform: scale(2.5) rotate(-10deg);
     }
     70% {
       left: 60%;
       top: 140px;
-      transform: scale(3.5) rotate(10deg);
+      transform: scale(1.9) rotate(10deg);
     }
     100% {
       left: calc(100% - 240px); /* alineado con la rama */
@@ -380,29 +380,25 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
     
 </script>
   <script>
-const ave = document.querySelector('.ave');
+  const ave = document.querySelector('.ave');
 
-function moverAvePequeño() {
-  // Movimiento random dentro de un rango pequeño
-  const dx = (Math.random() - 0.5) * 10; // horizontal ±5px
-  const dy = (Math.random() - 0.5) * 6;  // vertical ±3px
-  const rotate = (Math.random() - 0.5) * 10; // rotación ±5deg
+// Espera a que termine la animación CSS
+setTimeout(() => {
+  setInterval(() => {
+    const dx = (Math.random() - 0.5) * 10; // ±5px
+    const dy = (Math.random() - 0.5) * 6;  // ±3px
+    const rotate = (Math.random() - 0.5) * 10; // ±5deg
 
-  // Aplica transformación
-  ave.style.transform = `translate(${dx}px, ${dy}px) rotate(${rotate}deg)`;
-  
-  // Vuelve a la posición original después de un tiempo corto
-  setTimeout(() => {
-    ave.style.transform = `translate(0px, 0px) rotate(0deg)`;
-  }, 500); // 0.5 segundos
-}
+    ave.style.transition = 'transform 0.5s ease';
+    ave.style.transform = `translate(${dx}px, ${dy}px) rotate(${rotate}deg)`;
 
-// Cada 3 a 8 segundos, movimiento random
-setInterval(() => {
-  const delay = Math.random() * (8000 - 3000) + 3000;
-  moverAvePequeño();
-}, 3000); // llamamos cada 3s, el delay interno random hace que no sea predecible
-</script>
+    setTimeout(() => {
+      ave.style.transform = 'translate(0, 0) rotate(0deg)';
+    }, 500);
+  }, 3000); // cada 3s
+}, 6000); // coincide con la duración de la animación "volar"
+  </script>
+    
   <div class="copy-right_text">
                 <div class="container">
                     <div class="footer_border"></div>
@@ -419,6 +415,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
