--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
     z-index: 20;
   }
 
+.ave-inner {
+  width: 100%;
+  height: 100%;
+  background: url('https://pngimg.com/uploads/pigeon/pigeon_PNG3426.png') no-repeat center/contain;
+}
   @keyframes volar {
     0% {
       left: -120px;
@@ -246,7 +251,9 @@
   <img src="rama.png" alt="Rama">
 </div>
 
-<div class="ave"></div>
+<div class="ave">
+  <div class="ave-inner"></div>
+</div>
     <div class="links">
       <a href="https://www.youtube.com/watch?v=0cNNbb_cX1w&t" target="_blank">¿Cómo fueron los primeros 5000 años después de la extinción de los dinosaurios?</a>
       <a href="https://www.youtube.com/watch?v=e5-7KdJRkW4&t" target="_blank">Lo que no sabes del Mioceno</a>
@@ -380,23 +387,22 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
     
 </script>
   <script>
-  const ave = document.querySelector('.ave');
+  const aveInner = document.querySelector('.ave-inner');
 
-// Espera a que termine la animación CSS
 setTimeout(() => {
   setInterval(() => {
-    const dx = (Math.random() - 0.5) * 10; // ±5px
-    const dy = (Math.random() - 0.5) * 6;  // ±3px
-    const rotate = (Math.random() - 0.5) * 10; // ±5deg
+    const dx = (Math.random() - 0.5) * 10;
+    const dy = (Math.random() - 0.5) * 6;
+    const rotate = (Math.random() - 0.5) * 10;
 
-    ave.style.transition = 'transform 0.5s ease';
-    ave.style.transform = `scale(1) translate(${dx}px, ${dy}px) rotate(${rotate}deg)`;
+    aveInner.style.transition = 'transform 0.5s ease';
+    aveInner.style.transform = `translate(${dx}px, ${dy}px) rotate(${rotate}deg)`;
 
     setTimeout(() => {
-      ave.style.transform = 'scale(1) translate(0, 0) rotate(0deg)';
+      aveInner.style.transform = 'translate(0, 0) rotate(0deg)';
     }, 500);
-  }, 3000); // cada 3s
-}, 6000); // coincide con la duración de la animación "volar"
+  }, 3000);
+}, 6000);
   </script>
     
   <div class="copy-right_text">
@@ -415,6 +421,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
