--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 .ave-inner {
   width: 100%;
   height: 100%;
-  background: url('https://pngimg.com/uploads/birds/birds_PNG95.png') no-repeat center/contain;
+  background: url('https://pngimg.com/uploads/pigeon/pigeon_PNG3426.png') no-repeat center/contain;
 }
   @keyframes volar {
     0% {
@@ -262,7 +262,8 @@
 </div>
 
 <div class="ave">
-  <div class="ave-inner"></div>
+  </div>
+    <div class="ave-inner">
 </div>
     <div class="links">
       <a href="https://www.youtube.com/watch?v=0cNNbb_cX1w&t" target="_blank">¿Cómo fueron los primeros 5000 años después de la extinción de los dinosaurios?</a>
@@ -431,6 +432,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
