--- a/index.html
+++ b/index.html
@@ -32,21 +32,25 @@
     display: block;
   }
 
-  .ave {
-    position: fixed;
-    width: 80px;
-    height: 80px;
-    background: url('https://pngimg.com/uploads/pigeon/pigeon_PNG3426.png') no-repeat center/contain;
-    left: -120px; /* arranca fuera de pantalla */
-    top: 100px;
-    animation: volar 6s ease-in-out forwards;
-    z-index: 20;
-  }
+  .ave-fly {
+  position: fixed;
+  width: 80px;
+  height: 80px;
+  background: url('https://pngimg.com/uploads/pigeon/pigeon_PNG3426.png') no-repeat center/contain;
+  left: -120px;
+  top: 100px;
+  animation: volar 6s ease-in-out forwards;
+  z-index: 20;
+}
 
 .ave-inner {
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  width: 80px;
+  height: 80px;
   background: url('https://pngimg.com/uploads/pigeon/pigeon_PNG3426.png') no-repeat center/contain;
+  left: calc(100% - 240px); /* misma posición final de la rama */
+  top: calc(100% - 180px);
+  z-index: 21;
 }
   @keyframes volar {
     0% {
@@ -261,7 +265,7 @@
   <img src="rama.png" alt="Rama">
 </div>
 
-<div class="ave">
+<div class="ave-fly">
   </div>
     <div class="ave-inner">
 </div>
@@ -432,6 +436,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
