--- a/index.html
+++ b/index.html
@@ -64,11 +64,17 @@
       top: 140px;
       transform: scale(1.9) rotate(10deg);
     }
-       100% {
+       99% {
       left: calc(100% - 240px); /* alineado con la rama */
       top: calc(100% - 180px);
       transform: scale(1) rotate(0deg);
     }
+    100% {
+      left: calc(100% - 240px); /* alineado con la rama */
+      top: calc(100% - 180px);
+      transform: scale(0.1) rotate(0deg);
+    }
+
 
     
   }
@@ -415,7 +421,7 @@ setTimeout(() => {
       aveInner.style.transform = 'translate(0, 0) rotate(0deg)';
     }, 500);
   }, 3000);
-}, 6000);
+}, 5800);
   </script>
     
   <div class="copy-right_text">
@@ -434,6 +440,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
