--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
 
 <a href="https://www.youtube.com/watch?v=-Br8v_yCwVs" target="_blank">Cómo era la vida en el Jurásico</a>
-
+<a href="index2.html">Todos mis guiones por aQui</a>
     </div>
 <div class="description">
    Creador de historias que entrelazan datos con imaginación, revelando posibilidades que hasta ahora habían pasado por alto.
@@ -440,6 +440,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
