--- a/index2.html
+++ b/index2.html
@@ -299,7 +299,7 @@
 				<a href="https://www.youtube.com/watch?v=ZXGgUsZOkew" target="_blank">Mar de tethis</a>
 				<a href="https://www.youtube.com/watch?v=jJVEyw50_4s" target="_blank">10 animales que no quisieras encontrarte</a>
 
-				<a href="https://www.youtube.com/watch?v=EA7R4RSV7NY"_blank">!0 animales que no quisieras</a>
+				<a href="https://www.youtube.com/watch?v=EA7R4RSV7NY"_blank">10 animales que no quisieras encontrar </a>
 				<a href="https://www.youtube.com/watch?v=vGmXIEkf7bM"_blank"> La Revolución Agrícola</a>
 				<a href="https://www.youtube.com/watch?v=0uroh4l557I" target="_blank">La isla en la que la evolución FALLÓ (Y sus extrañas criaturas)</a>
 </a>
@@ -308,7 +308,7 @@
 				<a href="https://www.youtube.com/watch?v=g-w2lEn8NkI"_blank">Plioceno parte 2</a>
 				<a href="https://www.youtube.com/watch?v=YfwyN6B17Xs" target="_blank"> Plioceno parte 1</a>
 				<a href="https://www.youtube.com/watch?v=e5-7KdJRkW4&t" target="_blank">Lo que no sabes del Mioceno</a>
-				<a href="https://www.youtube.com/watch?v=2rBlP9QFoSw" target="_blank"> Bacteria Espacial</a>
+				<a href="https://www.youtube.com/watch?v=2rBlP9QFoSw" target="_blank"> Bacteria que evolucionó en el Espacio... Agarrate </a>
 
 				<a href="https://www.youtube.com/watch?v=DdbPSzj3dAc&t" target="_blank">Lo que no sabes del Oligoceno</a>
 				<a href="https://www.youtube.com/watch?v=VkmZ-Qstcks" target="_blank"> Eoceno </a>
@@ -474,6 +474,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
