--- a/index2.html
+++ b/index2.html
@@ -346,9 +346,9 @@
     </div>
 <div class="description">
    Todos mis guiones hasta el momento publicados, comentados, disfrutados, rechazados, ignorados e indiferenciados por la audiencia altamente, aunque, problablemente, no abosolutamente, aleatoria.
-<br> Entre Ríos Mares 
+<br>  <a href="index.html">EntreRíosMares</a>
   </div>
-   
+  
   <footer>
     <!--<div class="descriptionmodalidad" id="modalidadpago">
   Modalidad de pago: 50% por adelantado para comenzar el trabajo.<br>
@@ -474,6 +474,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
