--- a/index2.html
+++ b/index2.html
@@ -280,35 +280,35 @@
 
 				<a href="https://www.youtube.com/watch?v=0cNNbb_cX1w&t" target="_blank">
 				<a href="https://www.youtube.com/watch?v=0cNNbb_cX1w&t" target="_blank">-->
-				<a href="https://www.youtube.com/watch?v=s-LqiQnkPZA" target="_blank"> Homo Habilis, Historia del primer Humano</a>
-				<a href="https://www.youtube.com/watch?v=qPdh1HwW5Io" target="_blank"> El Origen de la Especie Humana</a>
+				<a href="https://www.youtube.com/watch?v=s-LqiQnkPZA" target="_blank"> Homo Habilis, Historia del primer humano</a>
+				<a href="https://www.youtube.com/watch?v=qPdh1HwW5Io" target="_blank"> El Origen de la Especie Humana - Primates anteriores al primer Homo</a>
 
-				<a href="https://www.youtube.com/watch?v=5ukU_YyEUt8" target="_blank"> Nena, Atlántico y Columbia</a>
-				<a href="https://www.youtube.com/watch?v=mikIAd9-wPI" target="_blank"> Valvara, Ur y Kenorland</a>
-				<a href="https://www.youtube.com/watch?v=ArgXnXl2f5Y" target="_blank"> Todo sobre el Asteroide </a>
-				<a href="https://www.youtube.com/watch?v=Mo9fuoRYHhc" target="_blank"> Pantalasa parte 2</a>
+				<a href="https://www.youtube.com/watch?v=5ukU_YyEUt8" target="_blank"> Nena, Atlántico y Columbia, Supercontinentes previos a Rodinia</a>
+				<a href="https://www.youtube.com/watch?v=mikIAd9-wPI" target="_blank"> Valvara, Ur y Kenorland, los primeros Súper y Continentes</a>
+				<a href="https://www.youtube.com/watch?v=ArgXnXl2f5Y" target="_blank"> Chicxulub: Todo sobre el Asteroide que exinguió los Dinosaurios </a>
+				<a href="https://www.youtube.com/watch?v=Mo9fuoRYHhc" target="_blank"> Pantalasa, el último superocéano - parte 2</a>
 	
-				<a href="https://www.youtube.com/watch?v=j1giYRyCgmc" target="_blank">Pantalasa: El último súper Océano que Lo Cubrió Todo y Transformó la Tierra - parte 1 </a>
+				<a href="https://www.youtube.com/watch?v=j1giYRyCgmc" target="_blank">Pantalasa: El último súper Océano que Lo Cubrió Todo y Transformó la Tierra <br> - parte 1 </a>
  
 				<a href="https://www.youtube.com/watch?v=BU4n_ELw-XQ" target="_blank"> Zelandia, el Octavo continente</a>
 				<a href="https://www.youtube.com/watch?v=Y95fM5MeQ7I" target="_blank"> Extintos por nuestra culpa</a>
-				<a href="https://www.youtube.com/watch?v=_WIyLNEGcoM" target="_blank"> Supercontinentes parte 2</a>
+				<a href="https://www.youtube.com/watch?v=_WIyLNEGcoM" target="_blank"> Supercontinentes: De Rodinia a Pangea - parte 2</a>
 
-				<a href="https://www.youtube.com/watch?v=tx5hjcGBKQY" target="_blank">Qué hacían los hombres de las cavernas... </a>
-				<a href="https://www.youtube.com/watch?v=_t1ErqVCelY" target="_blank">Super Continentes parte 1</a>
+				<a href="https://www.youtube.com/watch?v=tx5hjcGBKQY" target="_blank">¿Qué hacían los hombres de las cavernas? </a>
+				<a href="https://www.youtube.com/watch?v=_t1ErqVCelY" target="_blank">Super Continentes: De Rodinia a Pangea - parte 1</a>
 				<a href="https://www.youtube.com/watch?v=ZXGgUsZOkew" target="_blank">Mar de tethis</a>
-				<a href="https://www.youtube.com/watch?v=jJVEyw50_4s" target="_blank">10 animales que no quisieras encontrarte</a>
+				<a href="https://www.youtube.com/watch?v=jJVEyw50_4s" target="_blank">10 animales que no quisieras encontrarte del Paleozoico</a>
 
-				<a href="https://www.youtube.com/watch?v=EA7R4RSV7NY"_blank">10 animales que no quisieras encontrar </a>
+				<a href="https://www.youtube.com/watch?v=EA7R4RSV7NY"_blank">10 animales que no quisieras encontrarte del Mesozoico </a>
 				<a href="https://www.youtube.com/watch?v=vGmXIEkf7bM"_blank"> La Revolución Agrícola</a>
 				<a href="https://www.youtube.com/watch?v=0uroh4l557I" target="_blank">La isla en la que la evolución FALLÓ (Y sus extrañas criaturas)</a>
 </a>
-				<a href="https://www.youtube.com/watch?v=wfaUPwFXuVQ" target="_blank"> Era del Hielo Pleistoceno</a>
+				<a href="https://www.youtube.com/watch?v=wfaUPwFXuVQ" target="_blank"> Era del Hielo: Pleistoceno</a>
 	
-				<a href="https://www.youtube.com/watch?v=g-w2lEn8NkI"_blank">Plioceno parte 2</a>
-				<a href="https://www.youtube.com/watch?v=YfwyN6B17Xs" target="_blank"> Plioceno parte 1</a>
+				<a href="https://www.youtube.com/watch?v=g-w2lEn8NkI"_blank">Plioceno - parte 2</a>
+				<a href="https://www.youtube.com/watch?v=YfwyN6B17Xs" target="_blank"> Plioceno - parte 1</a>
 				<a href="https://www.youtube.com/watch?v=e5-7KdJRkW4&t" target="_blank">Lo que no sabes del Mioceno</a>
-				<a href="https://www.youtube.com/watch?v=2rBlP9QFoSw" target="_blank"> Bacteria que evolucionó en el Espacio... Agarrate </a>
+				<a href="https://www.youtube.com/watch?v=2rBlP9QFoSw" target="_blank"> Bacteria que evolucionó en el Espacio... ¡Agarrate! </a>
 
 				<a href="https://www.youtube.com/watch?v=DdbPSzj3dAc&t" target="_blank">Lo que no sabes del Oligoceno</a>
 				<a href="https://www.youtube.com/watch?v=VkmZ-Qstcks" target="_blank"> Eoceno </a>
@@ -330,10 +330,10 @@
 
 
 				<a href="https://www.youtube.com/watch?v=GualyCdfWM4" target="_blank"> ¿Cómo comenzó el Jurásico?</a>
-				<a href="https://www.youtube.com/watch?v=7rqU67HRT6c"_blank">Asi sonaban los dinasaurios realmente? Quedaras impactado! </a>
+				<a href="https://www.youtube.com/watch?v=7rqU67HRT6c"_blank">¿Así sonaban los dinasaurios realmente? Quedaras impactado! </a>
 
 
-				<a href="https://www.youtube.com/watch?v=-MzAfjZ8flA"_blank">¿Que pasaría si vives en Triásico? ¿Viviras?</a>
+				é<a href="https://www.youtube.com/watch?v=-MzAfjZ8flA"_blank">¿Qué pasaría si fueras al Triásico? ¿Sobrevivirás? </a>
 				<a href="https://www.youtube.com/watch?v=DOzu4v6VRCU&t=657s&pp=0gcJCbIJAYcqIYzv" target="_blank">La evolución orgánica: El origen y desarrollo de las plantas</a>
 				<a href="https://www.youtube.com/watch?v=3VmtRkRc6V0" target="_blank"> La Revolución Biológica </a>
 				<a href="https://www.youtube.com/watch?v=s5tX4wFk3kM" target="_blank"> ¿Cómo se creó la vida en la Tierra? Explicado en minutos</a>
@@ -474,6 +474,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
