--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   position: fixed;
   width: 80px;
   height: 80px;
-  background: url("pajaros/quieto1.png")) no-repeat center/contain;
+  background: url("pajaros/quieto1.png") no-repeat center/contain;
   left: calc(100% - 240px); /* misma posición final de la rama */
   top: calc(100% - 180px);
    opacity: 0; /* invisible al inicio */
@@ -440,6 +440,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
