--- a/index2.html
+++ b/index2.html
@@ -337,8 +337,7 @@
 				<a href="https://www.youtube.com/watch?v=DOzu4v6VRCU&t=657s&pp=0gcJCbIJAYcqIYzv" target="_blank">La evolución orgánica: El origen y desarrollo de las plantas</a>
 				<a href="https://www.youtube.com/watch?v=3VmtRkRc6V0" target="_blank"> La Revolución Biológica </a>
 				<a href="https://www.youtube.com/watch?v=s5tX4wFk3kM" target="_blank"> ¿Cómo se creó la vida en la Tierra? Explicado en minutos</a>
-
-
+				<a href="index.html">Volver a la página principal por aQui </a>
 		
 
 
@@ -346,7 +345,7 @@
     </div>
 <div class="description">
    Todos mis guiones hasta el momento publicados, comentados, disfrutados, rechazados, ignorados e indiferenciados por la audiencia altamente, aunque, problablemente, no abosolutamente, aleatoria.
-<br>  <a href="index.html">EntreRíosMares</a>
+</a>
   </div>
   
   <footer>
@@ -474,6 +473,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
