--- a/index2.html
+++ b/index2.html
@@ -333,11 +333,11 @@
 				<a href="https://www.youtube.com/watch?v=7rqU67HRT6c"_blank">¿Así sonaban los dinasaurios realmente? Quedaras impactado! </a>
 
 
-				é<a href="https://www.youtube.com/watch?v=-MzAfjZ8flA"_blank">¿Qué pasaría si fueras al Triásico? ¿Sobrevivirás? </a>
+				<a href="https://www.youtube.com/watch?v=-MzAfjZ8flA"_blank">¿Qué pasaría si fueras al Triásico? ¿Sobrevivirás? </a>
 				<a href="https://www.youtube.com/watch?v=DOzu4v6VRCU&t=657s&pp=0gcJCbIJAYcqIYzv" target="_blank">La evolución orgánica: El origen y desarrollo de las plantas</a>
 				<a href="https://www.youtube.com/watch?v=3VmtRkRc6V0" target="_blank"> La Revolución Biológica </a>
 				<a href="https://www.youtube.com/watch?v=s5tX4wFk3kM" target="_blank"> ¿Cómo se creó la vida en la Tierra? Explicado en minutos</a>
-				<a href="index.html">Volver a la página principal por aQui </a>
+				<a href="index.html">Volver a la página principal por aQui 🔙</a>
 		
 
 
@@ -473,6 +473,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
