--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       (Novedades x Investigación) + Retención
     </div>
 <div class="rama">
-  <img src="rama.png" alt="Rama">
+  <img src="pajaros/ramaroja.png" alt="Rama">
 </div>
 
 <div class="ave-fly">
@@ -440,6 +440,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
