--- a/index.html
+++ b/index.html
@@ -176,7 +176,15 @@
       color: #000;
       transform: scale(1.05);
     }
+      .links a.special {
+  background-color: rgba(255, 215, 0, 0.2); /* fondo dorado clarito */
+  border: 2px solid #ff4500;                /* borde diferente */
+  color: #ff4500;                           /* texto destacado */
+}
 
+      .links a.special:hover {
+  background-color: #ff4500;
+  color: #ff
     .icons {
       margin-top: 30px;
       display: flex;
@@ -288,7 +296,7 @@
 
 
 <a href="https://www.youtube.com/watch?v=-Br8v_yCwVs" target="_blank">Cómo era la vida en el Jurásico</a>
-<a href="index2.html">Todos mis guiones por aQui</a>
+<a href="index2.html" class="special">Todos mis guiones por aQui</a>
     </div>
 <div class="description">
    Creador de historias que entrelazan datos con imaginación, revelando posibilidades que hasta ahora habían pasado por alto.
@@ -440,6 +448,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
