--- a/index2.html
+++ b/index2.html
@@ -184,7 +184,15 @@
       justify-content: center;
       flex-wrap: wrap;
     }
+		.links a.special {
+  background-color: rgba(255, 215, 0, 0.2); /* fondo dorado clarito */
+  border: 2px solid #ff4500;                /* borde diferente */
+  color: #ff4500;                           /* texto destacado */
+}
 
+		.links a.special:hover {
+  background-color: #ff4500;
+  color: #ff
     .icons a {
       color: #fff;
       font-size: 2rem;
@@ -338,7 +346,7 @@
 				<a href="https://www.youtube.com/watch?v=DOzu4v6VRCU&t=657s&pp=0gcJCbIJAYcqIYzv" target="_blank">La evolución orgánica: El origen y desarrollo de las plantas</a>
 				<a href="https://www.youtube.com/watch?v=3VmtRkRc6V0" target="_blank"> La Revolución Biológica </a>
 				<a href="https://www.youtube.com/watch?v=s5tX4wFk3kM" target="_blank"> ¿Cómo se creó la vida en la Tierra? Explicado en minutos</a>
-				<a href="index.html">Volver a la página principal por aQui 🔙</a>
+				<a href="index.html" class="special" >Volver a la página principal por aQui 🔙</a>
 		
 
 
@@ -474,6 +482,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
