--- a/index.html
+++ b/index.html
@@ -268,6 +268,22 @@
     <h1 class="titulo-principal" id="titulo-animado">Entre Ríos Mares</h1>
     <div class="animated-text"> Guionista. Investigador. Publicidad. </div>
  <div class="Subtitulo2-text"> Scriptwriter, researcher & copywriter </div>
+
+ <div class="icons" style="margin-top: 20px;">
+    <a href="https://wa.me/5491153402972" target="_blank" title="WhatsApp: +54 9 11 5340 2972">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href="mailto:entreriosmares@gmail.com" title="Email: entreriosmares@gmail.com">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="https://www.facebook.com/profile.php?id=100093541457693" target="_blank" title="Facebook: Entre Ríos Mares">
+  <i class="fab fa-facebook"></i>
+</a>
+    <a href="https://x.com/EntreRiosMares" target="_blank" title="X: @EntreRiosMares">
+      <i class="fab fa-x-twitter"></i>
+    </a>
+  </div>
+    
    <div class="description especial">
       (Novedades x Investigación) + Retención
     </div>
@@ -448,6 +464,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
