--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
       .links a.special:hover {
   background-color: #ff4500;
-  color: #ff
+  color: #ff;}
     .icons {
       margin-top: 30px;
       display: flex;
@@ -464,6 +464,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
