--- a/index2.html
+++ b/index2.html
@@ -192,7 +192,7 @@
 
 		.links a.special:hover {
   background-color: #ff4500;
-  color: #ff
+  color: #fff;}
     .icons a {
       color: #fff;
       font-size: 2rem;
@@ -482,6 +482,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
