--- a/index2.html
+++ b/index2.html
@@ -346,7 +346,7 @@
 				<a href="https://www.youtube.com/watch?v=DOzu4v6VRCU&t=657s&pp=0gcJCbIJAYcqIYzv" target="_blank">La evolución orgánica: El origen y desarrollo de las plantas</a>
 				<a href="https://www.youtube.com/watch?v=3VmtRkRc6V0" target="_blank"> La Revolución Biológica </a>
 				<a href="https://www.youtube.com/watch?v=s5tX4wFk3kM" target="_blank"> ¿Cómo se creó la vida en la Tierra? Explicado en minutos</a>
-				<a href="index.html" class="special" >Volver a la página principal por aQui 🔙</a>
+				<a href="index.html" class="special" >Volver a la página principal por aQui ↩️</a>
 		
 
 
@@ -368,14 +368,14 @@ Se acepta Binance y Mercado Pago.
     </a>
     <a href="mailto:entreriosmares@gmail.com" title="Email: entreriosmares@gmail.com">
       <i class="fas fa-envelope"></i>
-    </a>-->
+    </a>
     <a href="https://www.facebook.com/profile.php?id=100093541457693" target="_blank" title="Facebook: Entre Ríos Mares">
   <i class="fab fa-facebook"></i>
 </a>
     <a href="https://x.com/EntreRiosMares" target="_blank" title="X: @EntreRiosMares">
       <i class="fab fa-x-twitter"></i>
     </a>
-  </div>
+  </div>-->
 </footer>
 </div>
 
@@ -482,6 +482,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
