--- a/index.html
+++ b/index.html
@@ -240,6 +240,13 @@
   animation: zoomIn 0.8s ease-out forwards;
   animation-delay: 2s; /* podés ajustar el delay si querés que aparezca después */
 }
+         .especial2 {
+  opacity: 0;
+  transform: scale(0.7);               /* arranca más chiquito */
+  animation: zoomIn 2s ease-out forwards;
+  animation-delay: 5s;                 /* arranca en el segundo 5 */
+}
+
 @keyframes zoomBackground {
   0% {
     background-size: 100%;
@@ -269,7 +276,7 @@
     <div class="animated-text"> Guionista. Investigador. Publicidad. </div>
  <div class="Subtitulo2-text"> Scriptwriter, researcher & copywriter </div>
 
- <div class="icons" style="margin-top: 20px;">
+ <div class="especial2"> <div class="icons" style="margin-top: 20px;">
     <a href="https://wa.me/5491153402972" target="_blank" title="WhatsApp: +54 9 11 5340 2972">
       <i class="fab fa-whatsapp"></i>
     </a>
@@ -282,7 +289,7 @@
     <a href="https://x.com/EntreRiosMares" target="_blank" title="X: @EntreRiosMares">
       <i class="fab fa-x-twitter"></i>
     </a>
-  </div>
+  </div></div>
     
    <div class="description especial">
       (Novedades x Investigación) + Retención
@@ -464,6 +471,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
