--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
     }
       .links a.special {
   background-color: rgba(255, 215, 0, 0.2); /* fondo dorado clarito */
-  border: 2px solid #ff4500;                /* borde diferente */
-  color: #ff4500;                           /* texto destacado */
+  border: 2px solid #ffd700;                /* borde diferente */
+  color: #fff;                           /* texto destacado */
 }
 
       .links a.special:hover {
   background-color: #ff4500;
-  color: #fff;}
+  color: #ffd700;}
     .icons {
       margin-top: 30px;
       display: flex;
@@ -471,6 +471,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
