--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
       .links a.special:hover {
   background-color: #ff4500;
-  color: #ffd700;}
+  color: #000;}
     .icons {
       margin-top: 30px;
       display: flex;
@@ -471,6 +471,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
