--- a/index2.html
+++ b/index2.html
@@ -176,16 +176,17 @@
       color: #000;
       transform: scale(1.05);
     }
-			.links a.special {
+			   .links a.special {
   background-color: rgba(255, 215, 0, 0.2); /* fondo dorado clarito */
-  border: 2px solid #ff4500;                /* borde diferente */
-  color: #ff4500;                           /* texto destacado */
+  border: 2px solid #ffd700;                /* borde diferente */
+  color: #fff;                           /* texto destacado */
 }
 
-		.links a.special:hover {
+      .links a.special:hover {
   background-color: #ff4500;
-  color: #fff;}
-    .icons a {
+  color: #000;}
+   
+		   .icons a {
       color: #fff;
       font-size: 2rem;
       transition: transform 0.3s;
@@ -482,6 +483,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
