--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     
 
 .especial {
-  font-family: 'Arial', sans-serif;
+  font-family: Helvetica, 'Arial', sans-serif;
   font-size: 1rem;
   color: #ffd700;
   text-shadow: 1px 1px 2px #000;
@@ -471,6 +471,7 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
             </div>
 </body>
 </html>
+
 
 
 
